2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Display icons for containers and items (currently missing image icon
	is being used) in the playlist treeview.

2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/common/icons.c:
	* src/common/icons.h:

	Add icon for container DIDL-Lite objects.

2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	- Return False from the button release callback so the treeview rows
	  could be expanded.
	- Pass the correct number of columns to gtk_tree_store_new().
	- Correct the treeview row searching code.
	- Implement addition of DIDL objects to treeview.
	- pack the icon and text in the same cell.
	- Try to list containers above items.

2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:

	Implement _get_parent_id().

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Make the tree store search function very generic and add recursive
	search option to it.

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/media-server-proxy.c:
	* src/av-cp/media-server-proxy.h:

	Add getter for DIDL-Lite parser to media server proxy.

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Implement media server proxy addition and search to/from the
	treemodel.

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* data/gupnp-av-cp.glade:
	* src/av-cp/av-cp-playlisttreeview.c:

	Playlist should be a tree rather than a list.

2007-10-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/media-server-proxy.c:

	Use g_error_free instead of g_free on GError objects.

2007-10-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Basic implementation of DIDL-Lite object representation.

	* src/av-cp/didl-lite-parser.c:
	* src/av-cp/didl-lite-parser.h:

	Basic implementation of DIDL-Lite document parser.
