@@ -37,6 +37,7 @@ typedef enum
         ICON_NETWORK,
         ICON_ACTION,
         ICON_VARIABLES,
+        ICON_FILE,
         ICON_MIN_VOLUME,
         ICON_MAX_VOLUME,
         ICON_CONTAINER,
